# homepage

./: .dockerignore  .gitignore  .gitlab-ci.yml  Cargo.toml  Dockerfile  Makefile  README.md  compose_example.yml  rsweb.config.toml
migrations/2022-07-30-100238_create_users/: up.sql
migrations/2022-08-08-182113_create_content/: up.sql
pages/: index.html  projects.html
src/: ap.rs  db.rs  main.rs  models.rs  schema.rs  templates.rs  tokenstore.rs
static/js/: projects.js
static/pages/: 404.html  auth_failed.html  index.html  login.html  projects.html
static/styles/: _global.css  _global.scss  index.css  index.scss  login.scss  projects.css  projects.scss
styles/: 404.scss  _global.scss  about.scss  ap.scss  index.scss  projects.scss
templates/: about.html  about.html.tera  admin_panel.html  admin_panel.html.tera  index.html  index.html.tera  loggedin.html  loggedin.html.tera
typescript/: Makefile  package-lock.json  package.json  tsconfig.json  webpack.config.js
typescript/src/: ap.ts  cookiebanner.ts  navbar.ts  projects.ts
