[package]
name = "homepage"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
dotenv = "0.15.0"
rocket = {version = "0.5.0-rc.2", features = ["secrets", "tls"]}
diesel = {version = "1.4.8", features = ["postgres", "r2d2"]}
argon2 = "0.4"
rand_core = {version = "0.6", features = ["std"]}
rand = "0.8.5"
# askama = {version = "0.12", features = ["with-rocket"]}
# until askamas with-rocket feature is fixed, we use a workaround in this repository
askama = "0.12"
